[metadata]
name = fs.expose.http
version = 0.1.0
author = merlink
maintainer = Martin Larralde
maintainer-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.expose
description = expose filesystems on a HTTP server
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = filesystem, Pyfilesystem2, expose, http
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = fs.expose, fs.expose.http
test_suite = tests
setup_requires = setuptools
install_requires =
  fs ~= 2.0.7
	six ~= 1.10
	fs.expose ~= 0.1
tests_require =
  fs.expose.http[test]

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
	docutils
	Pygments
	codecov
test =
	green
	coverage

[coverage:report]
show_missing = true
exclude_lines =
        pragma: no cover
        @abc.abstractmethod
        @abc.abstractproperty
        raise NotImplementedError
        return NotImplemented
        if six.PY3
        if six.PY2

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
